# supercomputers

./: .gitignore  README.md
set4/: .gitignore  CMakeLists.txt  main.c  questions.txt
set4/allinone/: .gitignore  CMakeLists.txt  sum.c  sum_mpi.c  sum_omp.c  sum_omp_mpi.c
set4/common/: .gitignore
set4/innlevering/: CMakeLists.txt  sum.c  sum_omp.c
set4/report/: .gitignore  report.tex
set4/task1/: .gitignore  CMakeLists.txt
set4/task2/: .gitignore  CMakeLists.txt  vectorsum_omp.c
set4/task3/: .gitignore  CMakeLists.txt  vectorsum_mpi.c
set4/task4/: .gitignore  CMakeLists.txt  sum_omp_mpi.c
set6/: .gitignore  poisson.c  report.tex
set6-2/: .gitignore  poisson.c
set6/allParallel/: CMakeLists.txt  checkConvergence.m  hosts  p1-12.txt  poisson.c  t1-12.txt  varyn.txt  varynodes.txt  varynp.txt  varyp.txt  varyt.txt  varytp.txt
set6/kongullScripts/: job_varyn.sh  job_varyp.sh  job_varyt.sh  readme.txt  wrapper_n.sh  wrapper_p.sh  wrapper_t.sh
set6/report/: .gitignore  conclusion.tex  convergence.tex  discussion.tex  hardware.tex  introduction.tex  ourcode.tex  report.aux  report.tex  results.tex  theory.tex
